# AAPP_Project

./: 50_100_0_10_0.graph  5_50_0_10_0.graph  Analysis.ipynb  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  dfs.dot  tarjanscc.dot
analysis/: Analysis.ipynb
analysis/.ipynb_checkpoints/: Analysis-checkpoint.ipynb
analysis/presentation/: presentation.aux  presentation.nav  presentation.tex  presentation.toc
data/: empty.txt
doc/html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  analysis_8py.html  analyzer_8cpp.html  analyzer_8cpp.js  analyzer_8cpp_a93e68103acb41f68721e5be965fb11b3.html  analyzer_8cpp_source.html  analyzer_8h.html  analyzer_8h_source.html  annotated.html  annotated_dup.js  application_8cpp.html  application_8cpp_source.html  application_8h.html  application_8h_source.html  class_analyzer-members.html  class_analyzer.html  class_analyzer.js  class_analyzer_a1be2ff17bba265bdef6e1b44748eaf96.html  class_analyzer_a2aed8194a48a8385ef271af3bd6fdd42.html  class_analyzer_a471ed64111b58f49cfee911b5db93ada.html  class_analyzer_a567b5d8b2bbdde28b489834c1644446e.html  class_analyzer_a5ac77dbb2bbea6b34af561272705d64e.html  class_analyzer_a6009c58addbb9730b54580a5f01ddce7.html  class_analyzer_a7903ffdba689848dd199139e5dacf1bc.html  class_analyzer_a8207cd71986d26dc8abda1a807490ab2.html  class_analyzer_a9108681fee1078aed1af2ddee58cc55c.html  class_analyzer_ae32079d0816589617a0c76b1d4cf881b.html  class_analyzer_ae4637e33a985efefebf2a10502be351c.html  class_application-members.html  class_application.html  class_application.js  class_application_a169c37596e9a7a9e0546700876adcbe7.html  class_application_a1d9cfbea705655427e7d1847de2567c1.html  class_application_a96cff2295a95d7e6de06638bb7e61243.html  class_application_abf73a60a6a2e4b83a675de777273d12c.html  (+208 more)
header/: algorithms.h  analyzer.h  application.h  graphcomponent.h  nuutila.h  pearce.h  tarjan.h  typedef.h  utilities.h  visualize.h
input/: dfs.dot  dfs2.dot  generate_graph_directories.py
src/: Analysis.ipynb  CMakeLists.txt  TODO  algorithms.cpp  analysis.py  analyzer.cpp  application.cpp  experiment.cpp  generate_graph_directories.py  graph.cpp  graphcomponent.cpp  main.cpp  nuutila.cpp  pearce.cpp  scc.dot  tarjan.cpp  test.cpp  visualize.cpp
src/.ipynb_checkpoints/: Analysis-checkpoint.ipynb  analysis-checkpoint.py  analyzer-checkpoint.cpp  generate_graph_directories-checkpoint.py
src/cpp/: analyzer.cpp  application.cpp  graphcomponent.cpp  main.cpp  nuutila.cpp  pearce.cpp  tarjan.cpp  visualize.cpp
src/python/: analysis.py
(+119 files in other folders)
